# SMIW_projekt_KLAPA_2

BLEapp2/: settings.gradle.kts
BLEapp2/app/: build.gradle.kts
BLEapp2/app/src/androidTest/java/com/example/bleapp2/: ExampleInstrumentedTest.java
BLEapp2/app/src/main/: AndroidManifest.xml
BLEapp2/app/src/main/java/com/example/bleapp2/: MainActivity.java  MainActivity2.java
BLEapp2/app/src/main/res/layout/: activity_main.xml  activity_main2.xml
BLEapp2/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
BLEapp2/app/src/main/res/values-night/: themes.xml
BLEapp2/app/src/test/java/com/example/bleapp2/: ExampleUnitTest.java
BLEapp2/gradle/wrapper/: gradle-wrapper.properties
PCB/: Płytka+PCB.brd  SMIW_KLAPA_PCB.sch  biblioteka.lbr
untitled_PWM_v2/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay  prj.conf  xiao_ble.overlay
untitled_PWM_v2/src/: main.c
untitled_PWM_v2/src/custom_files/: battery.c  battery.h  remote.c  remote.h  serwo_control.c  serwo_control.h
